--- a/wqredisclient/window/MainWindow.xaml
+++ b/wqredisclient/window/MainWindow.xaml
@@ -27,11 +27,12 @@
         </Grid.RowDefinitions>
         <Border Background="{StaticResource primaryBrush}" Grid.ColumnSpan="2" Grid.Row="0" Grid.Column="0" />
         <StackPanel Grid.ColumnSpan="2" Height="16" Orientation="Horizontal" Margin="10 0">
-            <wq:TopButton Width="16" Height="16" Margin="10 0" Icon="{StaticResource svgServerAdd}" />
-            <wq:TopButton Width="16" Height="16" Margin="10 0"  Icon="{StaticResource svgImport}" />
-            <wq:TopButton Width="16" Height="16" Margin="10 0"  Icon="{StaticResource svgExport}" />
-            <wq:TopButton Width="16" Height="16" Margin="10 0"  Icon="{StaticResource svgRefresh}" />
-            <wq:TopButton Width="16" Height="16" Margin="10 0"  Icon="{StaticResource svgSave}" />
+            <wq:TopButton Width="16" Height="16" Margin="10 0" ToolTip="add connection" Icon="{StaticResource svgServerAdd}" />
+            <wq:TopButton Width="16" Height="16" Margin="10 0" ToolTip="import config"  Icon="{StaticResource svgImport}" />
+            <wq:TopButton Width="16" Height="16" Margin="10 0" ToolTip="export config"  Icon="{StaticResource svgExport}" />
+            <wq:TopButton Width="16" Height="16" Margin="10 0" ToolTip="add key"  Icon="{StaticResource svgAddKey}" />
+            <wq:TopButton Width="16" Height="16" Margin="10 0" ToolTip="refresh" Icon="{StaticResource svgRefresh}" />
+            <wq:TopButton Width="16" Height="16" Margin="10 0" ToolTip="save config" Icon="{StaticResource svgSave}" />
             <wq:TopButton Width="16" Height="16" Margin="10 0"  Icon="{StaticResource svgDelete}" />
             <wq:TopButton Width="16" Height="16" Margin="10 0"  Icon="{StaticResource svgSetup}" />
         </StackPanel>
@@ -59,7 +60,7 @@
                         </Border>
                     </HierarchicalDataTemplate>
                     <HierarchicalDataTemplate DataType="{x:Type et:RedisDatabase}">
-                        <Border Style="{StaticResource treeViewBorderStyle}">
+                        <Border ToolTip="{Binding Name}" Style="{StaticResource treeViewBorderStyle}">
                             <StackPanel Width="auto" Height="auto" Orientation="Horizontal" Margin="24 0 0 0">
                                 <Path Margin="0 0 8 0" Width="14" Height="14" Fill="{Binding Path=KeyCount,Converter={StaticResource countBrushConvert}}" Data="{StaticResource svgDatabase}" Stretch="Fill">
                                     
@@ -77,15 +78,14 @@
                     <RowDefinition Height="*" />                    
                 </Grid.RowDefinitions>
                 <StackPanel Grid.Row="0" Margin="10">
-                    <TextBox />
-                    <Button>Search</Button>
+                    <wq:SearchKeyBox x:Name="searchKeyBox" />
                 </StackPanel>
                 <TreeView Style="{StaticResource redisKeyTreeViewStyle}" Grid.Row="1" x:Name="redisKeysBox">
                     <TreeView.ItemTemplate>
                         <HierarchicalDataTemplate DataType="{x:Type et:RedisKey}" ItemsSource="{Binding Keys}">
-                        <Border Margin="20 0 0 0" Style="{StaticResource treeViewBorderStyle}">
+                        <Border Background="Transparent" Padding="10 6">
                             <StackPanel Orientation="Horizontal">                                
-                                <TextBlock ToolTip="{Binding Key}" Text="{Binding Name}" />
+                                <TextBlock Margin="24 0 0 0" ToolTip="{Binding Key}" Text="{Binding Name}" />
                             </StackPanel>                            
                         </Border>
                     </HierarchicalDataTemplate>
